@@ -5,7 +5,6 @@
 plugins {
     `java-library`
     `maven-publish`
-    kotlin("jvm") version "1.8.0"
 }
 
 repositories {
@@ -18,10 +17,29 @@ repositories {
         url = uri("https://repo.maven.apache.org/maven2/")
     }
 }
+val namedModules = configurations.create("namedModules")
+val unnamedModules = configurations.create("unnamedModules")
+tasks.compileJava {
+    inputs.property("moduleName", "worldmanager.core")
+    doFirst {
+        options.compilerArgs = listOf(
+            "--module-path", namedModules.asPath,
+            "--add-modules", "org.json",
+            "--patch-module", "worldmanager.core=${unnamedModules.asPath}"
+        )
 
+        classpath = files()
+    }
+}
+
+//println(unnamedModules.asPath)
 dependencies {
     api(libs.org.json.json)
+   namedModules(libs.org.json.json)
+
     api(libs.com.github.querz.nbt)
+    namedModules(libs.com.github.querz.nbt)
+ unnamedModules(libs.com.github.querz.nbt)
     testImplementation(libs.org.junit.jupiter.junit.jupiter)
 }
 
@@ -32,7 +50,7 @@ java.sourceCompatibility = JavaVersion.VERSION_21
 
 java {
     withSourcesJar()
-    withJavadocJar()
+  //  withJavadocJar()
 }
 
 publishing {
